# chrustler

./: .gitignore  Cargo.toml  README.md
autostart/: chrustler.desktop  chrustler_autostart.sh
keypad_pcb/: Chrustler_Keypad.kicad_prl  Chrustler_Keypad.kicad_pro
keypad_pcb/Chrustler_keys/: Chrustler_keys.kicad_pcb  Chrustler_keys.kicad_prl  Chrustler_keys.kicad_pro  Chrustler_keys.kicad_sch
scad/: crustler chassis.scad  legend_caps.scad  soundcard standoff.scad
scad/keycap_playground/: keycap_playground.scad
src/: encoders.rs  keypad.rs  main.rs  tof.rs
